# aggregation_md

./: README.md  SETUP.md  aggr_Dockerfile.alma9
cg_cvgen/: CMakeLists.txt  README.md  cmds.txt  requirements.txt
cg_cvgen/include/: Config.hpp  FileUtils.hpp  Runner.hpp  TextUtils.hpp
cg_cvgen/scripts/: cvgen_backend.py
cg_cvgen/src/: Config.cpp  FileUtils.cpp  Runner.cpp  TextUtils.cpp  main.cpp
cg_md/: CMakeLists.txt
cg_md/force_fields/charmm/: sep.ff
cg_md/force_fields/martini3IDP/: sep.ff
cg_md/include/: Config.hpp  Dssp.hpp  FileUtils.hpp  GroUtils.hpp  IndexBuilder.hpp  MdpWriter.hpp  PlumedWriter.hpp  SamplingMonitor.hpp  Shell.hpp  StringUtils.hpp  TopologyEditor.hpp  Workflow.hpp
cg_md/mappings/: sep.charmm36.map
cg_md/src/: Config.cpp  Dssp.cpp  FileUtils.cpp  GroUtils.cpp  IndexBuilder.cpp  MdpWriter.cpp  PlumedWriter.cpp  SamplingMonitor.cpp  Shell.cpp  StringUtils.cpp  TopologyEditor.cpp  Workflow.cpp  WorkflowAdaptive.cpp  WorkflowMetadynamics.cpp  WorkflowPrepare.cpp  WorkflowSimulation.cpp  main.cpp
cg_md/system/simulation/: view_setup.tcl
envs/: cg_env.yml  mlcolvar.yml  plumed_meta.yml
